# celery-intro

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
celery_intro/: celery.py  fastapi.py  tasks.py
