[tool.poetry]
name = "celery-intro"
version = "0.1.0"
description = ""
authors = ["Oleg Gera"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = "~5.2.7"
requests = "~2.28.1"
ipython = "~8.5.0"
fastapi = "~0.85.0"
flower = "~1.2.0"
uvicorn = "~0.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
